# istari

./: .env.example  .gitignore  APP_IDEAS.md  CLAUDE.md  COMPLETED.md  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  istari-project-outline.md  plan.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 03aeaee79ef9_add_hnsw_index_on_memories_embedding.py  51ae659eac96_add_conversation_messages_table.py  93fb3e33a601_initial_schema.py  a1b2c3d4e5f6_update_enums_and_notifications.py  a1ca9dbbef4a_add_eisenhower_fields_to_todos.py  b2d4e6f8a0c2_add_today_date_to_todos.py  c3e5f7a9b1d3_add_projects_table.py  d4f6a8b2c1e3_add_recurrence_rule_to_todos.py
backend/src/istari/: __init__.py
backend/src/istari/agents/: chat.py  memory.py  memory_extractor.py  proactive.py  todo_context.py
backend/src/istari/api/: auth.py  debug.py  deps.py  main.py  schemas.py
backend/src/istari/config/: llm_routing.yml  mcp_servers.yml  schedules.yml  settings.py
backend/src/istari/db/: session.py
backend/src/istari/llm/: config.py  router.py
backend/src/istari/models/: __init__.py  agent_run.py  base.py  conversation.py  digest.py  memory.py  notification.py  project.py  todo.py  user.py
backend/src/istari/tools/: base.py
backend/src/istari/worker/: main.py
backend/tests/: conftest.py
backend/tests/fixtures/: llm_responses.py
backend/tests/unit/test_agents/: test_agent_tools.py  test_build_system_prompt.py  test_chat.py  test_filesystem_tools.py  test_memory_extractor.py  (+3 more)
(+125 files in other folders)
